--- a/dam_analysis.ipynb
+++ b/dam_analysis.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "b706c4d4",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
     "        連続異常期間の情報（開始日時、終了日時、継続時間、初期勾配値、異常タイプ）\n",
     "    \"\"\"\n",
     "    # 異常値のフラグを作成\n",
-    "    is_anomaly = (df[column] > threshold_upper) | (df[column] < threshold_lower)\n",
+    "    is_anomaly = (df[column] >= threshold_upper) | (df[column] <= threshold_lower)\n",
     "\n",
     "    # 異常値の開始点を検出\n",
     "    anomaly_start = is_anomaly & (~is_anomaly.shift(1, fill_value=False))\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 85,
    "id": "8696cf8d",
    "metadata": {},
    "outputs": [
@@ -129,11 +129,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_99033/1434462164.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_34545/2044331348.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat(df_list, axis=0)\n",
-      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_99033/1434462164.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_34545/2044331348.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat(df_list, axis=0)\n",
-      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_99033/1434462164.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_34545/2044331348.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat(df_list, axis=0)\n"
      ]
     }
@@ -141,8 +141,8 @@
    "source": [
     "# ============================================\n",
     "#! NOTE: ここを変更すること\n",
-    "threshold_upper = 0.5  # 上限閾値（急激な上昇）\n",
-    "threshold_lower = 0.5  # 下限閾値（急激な下降）\n",
+    "threshold_upper = 1.0  # 上限閾値（急激な上昇）\n",
+    "threshold_lower = -1.0  # 下限閾値（急激な下降）\n",
     "\n",
     "#! NOTE: 最小連続時間数を指定してください\n",
     "min_consecutive_hours = 8  # 3時間以上連続した異常のみ検出\n",
@@ -198,45 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "75afb399",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "58"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(anomaly_periods_df_dict.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "85b3fe10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eebe780b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aed71362",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,8 +214,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "7a637f05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.daminfo import DamInfo\n",
+    "import datetime as dt\n",
+    "\n",
+    "\n",
+    "# !NOTE: これを編集 ------------------------\n",
+    "dam_infomation = DamInfo()\n",
+    "dam_id = dam_infomation.convert_rivername2id(\"緑川\")\n",
+    "target_date = \"2024-08-24\"\n",
+    "target_date_end = \"2024-08-30\"\n",
+    "# !---------------------------------------\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    f\"../SuimonSuishituDB/fixed_out/dam_data/{dam_id[0]}/dam_{target_date.split('-')[0]}.csv\",\n",
+    "    encoding=\"utf-8\",\n",
+    "    header=0,\n",
+    "    index_col=0,\n",
+    "    parse_dates=True,\n",
+    ")\n",
+    "df_tmp = df.loc[\"2024-08-26\":\"2024-08-30\"].copy()\n",
+    "tmp_anomaly_periods_df = anomaly_periods_df_dict[str(dam_id[0])]\n",
+    "anomaly_periods_df = tmp_anomaly_periods_df.loc[\n",
+    "    tmp_anomaly_periods_df[\"開始日時\"] >= dt.datetime.strptime(target_date, \"%Y-%m-%d\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "dfe90c2f",
    "metadata": {},
    "outputs": [
     {
@@ -276,153 +272,61 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>流域平均雨量</th>\n",
-       "      <th>流域平均雨量属性</th>\n",
-       "      <th>貯水量</th>\n",
-       "      <th>貯水量属性</th>\n",
-       "      <th>流入量</th>\n",
-       "      <th>流入量属性</th>\n",
-       "      <th>放流量</th>\n",
-       "      <th>放流量属性</th>\n",
-       "      <th>貯水率</th>\n",
-       "      <th>貯水率属性</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>開始日時</th>\n",
+       "      <th>終了日時</th>\n",
+       "      <th>継続時間</th>\n",
+       "      <th>初期勾配値</th>\n",
+       "      <th>異常タイプ</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2024-08-26 00:00:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>6224.0</td>\n",
-       "      <td></td>\n",
-       "      <td>14.56</td>\n",
-       "      <td></td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>87.1</td>\n",
-       "      <td></td>\n",
+       "      <th>7</th>\n",
+       "      <td>2024-08-27 16:00:00</td>\n",
+       "      <td>2024-08-28 20:00:00</td>\n",
+       "      <td>29</td>\n",
+       "      <td>-2.2</td>\n",
+       "      <td>急下降</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-08-26 01:00:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>6280.0</td>\n",
-       "      <td></td>\n",
-       "      <td>14.68</td>\n",
-       "      <td></td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>87.9</td>\n",
-       "      <td></td>\n",
+       "      <th>8</th>\n",
+       "      <td>2024-09-07 19:00:00</td>\n",
+       "      <td>2024-09-08 11:00:00</td>\n",
+       "      <td>17</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>急下降</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-08-26 02:00:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>6344.0</td>\n",
-       "      <td></td>\n",
-       "      <td>18.87</td>\n",
-       "      <td></td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>88.8</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-08-26 03:00:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>6425.0</td>\n",
-       "      <td></td>\n",
-       "      <td>19.95</td>\n",
-       "      <td></td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>89.9</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-08-26 04:00:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>6491.0</td>\n",
-       "      <td></td>\n",
-       "      <td>19.18</td>\n",
-       "      <td></td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "      <td>90.8</td>\n",
-       "      <td></td>\n",
+       "      <th>9</th>\n",
+       "      <td>2024-09-09 19:00:00</td>\n",
+       "      <td>2024-09-10 02:00:00</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>急下降</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     流域平均雨量 流域平均雨量属性     貯水量 貯水量属性    流入量 流入量属性  放流量 放流量属性  \\\n",
-       "date                                                                         \n",
-       "2024-08-26 00:00:00     0.0           6224.0        14.56        0.0         \n",
-       "2024-08-26 01:00:00     0.0           6280.0        14.68        0.0         \n",
-       "2024-08-26 02:00:00     0.0           6344.0        18.87        0.0         \n",
-       "2024-08-26 03:00:00     0.0           6425.0        19.95        0.0         \n",
-       "2024-08-26 04:00:00     0.0           6491.0        19.18        0.0         \n",
-       "\n",
-       "                      貯水率 貯水率属性  \n",
-       "date                             \n",
-       "2024-08-26 00:00:00  87.1        \n",
-       "2024-08-26 01:00:00  87.9        \n",
-       "2024-08-26 02:00:00  88.8        \n",
-       "2024-08-26 03:00:00  89.9        \n",
-       "2024-08-26 04:00:00  90.8        "
+       "                 開始日時                終了日時  継続時間  初期勾配値 異常タイプ\n",
+       "7 2024-08-27 16:00:00 2024-08-28 20:00:00    29   -2.2   急下降\n",
+       "8 2024-09-07 19:00:00 2024-09-08 11:00:00    17   -1.5   急下降\n",
+       "9 2024-09-09 19:00:00 2024-09-10 02:00:00     8   -1.2   急下降"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from utils.daminfo import DamInfo\n",
-    "\n",
-    "# !NOTE: これを編集 ------------------------\n",
-    "dam_infomation = DamInfo()\n",
-    "dam_id = dam_infomation.convert_rivername2id(\"緑川\")\n",
-    "target_date = \"2024-08-26\"\n",
-    "target_date_end = \"2024-08-30\"\n",
-    "# !---------------------------------------\n",
-    "\n",
-    "\n",
-    "df = pd.read_csv(\n",
-    "    f\"../SuimonSuishituDB/fixed_out/dam_data/{dam_id[0]}/dam_{target_date.split('-')[0]}.csv\",\n",
-    "    encoding=\"utf-8\",\n",
-    "    header=0,\n",
-    "    index_col=0,\n",
-    "    parse_dates=True,\n",
-    ")\n",
-    "\n",
-    "df_tmp = df.loc[\"2024-08-26\":\"2024-08-30\"]\n",
-    "tmp_anomaly_periods_df = anomaly_periods_df_dict[str(dam_id[0])]\n",
-    "anomaly_periods_df = tmp_anomaly_periods_df.loc[tmp_anomaly_periods_df[\"開始日時\"] >= target_date]\n",
-    "\n",
-    "df_tmp.head()"
+    "anomaly_periods_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 88,
    "id": "ed90659e",
    "metadata": {},
    "outputs": [
@@ -435,18 +339,6 @@
       "  急下降異常: 43件\n",
       "  総異常件数: 62件\n",
       "  異常率: 51.67%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/f2/8f6ghc1n46ddyq_s9fyjqwvw0000gn/T/ipykernel_99033/3294794438.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_tmp[\"貯水率_grad\"] = df_tmp[\"貯水率\"].diff()\n"
      ]
     },
     {
@@ -483,7 +375,7 @@
     "ax2_right.set_xlabel(\"\")\n",
     "\n",
     "ax3 = plt.subplot(5, 1, 5)\n",
-    "# # 貯水率の勾配を計算\n",
+    "# 貯水率の勾配を計算\n",
     "df_tmp[\"貯水率_grad\"] = df_tmp[\"貯水率\"].diff()\n",
     "df_tmp[\"貯水率_grad\"].plot(ax=ax3, label=\"貯水率勾配[%/h]\", color=\"green\", linewidth=1)\n",
     "ax3.set_ylabel(\"貯水率勾配[%/h]\")\n",
@@ -541,8 +433,11 @@
     "for i, (_, row) in enumerate(anomaly_periods_df.iterrows()):\n",
     "    start_time = row[\"開始日時\"]\n",
     "    end_time = row[\"終了日時\"]\n",
-    "    start_grad_value = df_tmp.loc[start_time, \"貯水率_grad\"]\n",
-    "    end_grad_value = df_tmp.loc[end_time, \"貯水率_grad\"]\n",
+    "    try:\n",
+    "        start_grad_value = df_tmp.loc[start_time, \"貯水率_grad\"]\n",
+    "        end_grad_value = df_tmp.loc[end_time, \"貯水率_grad\"]\n",
+    "    except:\n",
+    "        continue\n",
     "    ax3.scatter(\n",
     "        start_time,\n",
     "        start_grad_value,\n",
@@ -592,6 +487,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7bcaf818",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb470a2b",
    "metadata": {},
    "outputs": [],
    "source": []
